# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../multimodalinput_mini.gni")

action("pack_mouse_icons") {
  script = "${mmi_path}/etc/pack_resources.py"
  sources = [
    "src/Colorsucker.svg",
    "src/Copy.svg",
    "src/Cross.svg",
    "src/Cursor_Circle.png",
    "src/Cursor_Cross.svg",
    "src/Custom_Cursor_Circle.svg",
    "src/Default.svg",
    "src/East.svg",
    "src/Forbid.svg",
    "src/Hand_Grabbing.svg",
    "src/Hand_Open.svg",
    "src/Hand_Pointing.svg",
    "src/Help.svg",
    "src/Horizontal_Text_Cursor.svg",
    "src/Laser_Cursor.svg",
    "src/Laser_Cursor_Dot.svg",
    "src/Laser_Cursor_Dot_Red.svg",
    "src/Loading.svg",
    "src/Loading_Left.svg",
    "src/Loading_Right.svg",
    "src/MID_Btn_East.svg",
    "src/MID_Btn_East_West.svg",
    "src/MID_Btn_North.svg",
    "src/MID_Btn_North_East.svg",
    "src/MID_Btn_North_South.svg",
    "src/MID_Btn_North_South_West_East.svg",
    "src/MID_Btn_North_West.svg",
    "src/MID_Btn_South.svg",
    "src/MID_Btn_South_East.svg",
    "src/MID_Btn_South_West.svg",
    "src/MID_Btn_West.svg",
    "src/Move.svg",
    "src/North.svg",
    "src/North_East.svg",
    "src/North_East_South_West.svg",
    "src/North_South.svg",
    "src/North_West.svg",
    "src/North_West_South_East.svg",
    "src/Resize_Left_Right.svg",
    "src/Resize_Up_Down.svg",
    "src/ScreenRecorder_Cursor.svg",
    "src/Screenshot_Cross.svg",
    "src/Screenshot_Cursor.svg",
    "src/South.svg",
    "src/South_East.svg",
    "src/South_West.svg",
    "src/Text_Cursor.svg",
    "src/West.svg",
    "src/West_East.svg",
    "src/Zoom_In.svg",
    "src/Zoom_Out.svg",
  ]
  outputs = [ "$target_out_dir/mouse_icons.dat" ]
  args = [
    rebase_path("src"),
    rebase_path(outputs[0]),
  ]
}

ohos_prebuilt_etc("mouse_icons_dat") {
  source = "$target_out_dir/mouse_icons.dat"
  part_name = "input"
  subsystem_name = "multimodalinput"
  relative_install_dir = "multimodalinput"
  deps = [ ":pack_mouse_icons" ]
}

# Non-icon config files (unchanged)
ohos_prebuilt_etc("multimodalinput_config_ability.json") {
  source = "${mmi_path}/etc/ability_launch_config.json"
  part_name = "input"
  subsystem_name = "multimodalinput"
  relative_install_dir = "multimodalinput"
}

ohos_prebuilt_etc("multimodalinput_config_exclude.json") {
  source = "${mmi_path}/etc/exclude_keys_config.json"
  part_name = "input"
  subsystem_name = "multimodalinput"
  relative_install_dir = "multimodalinput"
}

ohos_prebuilt_etc("multimodalinput_config_white.json") {
  source = "${mmi_path}/etc/white_list_config.json"
  part_name = "input"
  subsystem_name = "multimodalinput"
  relative_install_dir = "multimodalinput"
}

ohos_prebuilt_etc("multimodalinput.para.dac") {
  source = "${mmi_path}/etc/multimodalinput.para.dac"
  part_name = "input"
  subsystem_name = "multimodalinput"
  module_install_dir = "etc/param"
}

ohos_prebuilt_etc("multimodalinput.config.exceptional_system_keys") {
  source = "${mmi_path}/etc/exceptional_system_keys_config.json"
  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
  relative_install_dir = "multimodalinput"
}

ohos_prebuilt_etc("multimodalinput.config.system_keys") {
  source = "${mmi_path}/etc/system_keys_config.json"
  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
  relative_install_dir = "multimodalinput"
}

ohos_prebuilt_etc("multimodalinput.config.system_hotkeys") {
  source = "${mmi_path}/etc/system_hotkeys_config.json"
  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
  relative_install_dir = "multimodalinput"
}

group("input_mouse_icon") {
  deps = [
    ":mouse_icons_dat",
    ":multimodalinput.config.exceptional_system_keys",
    ":multimodalinput.config.system_hotkeys",
    ":multimodalinput.config.system_keys",
    ":multimodalinput.para.dac",
    ":multimodalinput_config_ability.json",
    ":multimodalinput_config_exclude.json",
    ":multimodalinput_config_white.json",
  ]
}
